# aerosim

./: README.md  install_aerosim.bat  install_aerosim.sh  launch_aerosim.sh  mkdocs.yml  pre_install.bat  pre_install.sh  pyproject.toml
aerosim/: README.md  pyproject.toml
aerosim-data/python/aerosim_data/: middleware.py  utils.py
aerosim-dynamics-models/python/aerosim_dynamics_models/: evtol_effectors_fmu_model.py  jsbsim_dynamics_fmu_model.py  jsbsim_standalone_fmu_model.py  rotor_effector_fmu_model.py  trajectory_follower_fmu_model.py
aerosim-sensors/python/aerosim_sensors/: adsb_sensor_fmu_model.py  gnss_sensor_fmu_model.py  imu_sensor_fmu_model.py
aerosim/src/aerosim/: __init__.py  cli.py
aerosim/src/aerosim/utils/: __init__.py  config.py  conversion.py  process_workflows.py  requirements.txt
docs/: aerosim_app.md  api_aerosim.md  api_aerosim_data.md  api_aerosim_sensors.md  api_daa.md  api_dynamics_models.md  api_first_flight.md  api_pilot.md  api_simulink.md  assets_aerosim.md  build_linux.md  build_windows.md  conventions.md  example_daa.md  example_first_flight.md  example_pilot.md  example_simulink.md  first_steps_tutorial.md  index.md  messages.md  overview.md  running_aerosim.md  sim_config.md  simulink.md  simulink_integration.md  takeoff_tutorial.md  usd_asset_pipeline.md  utils.md
examples/: autopilot_daa_scenario.py  first_flight.py  pilot_control_with_flight_deck.py  simulink_cosim_and_fmu.py
examples/utils/: README.md  pyproject.toml  requirements.txt
examples/utils/aerosim_utils/: __init__.py  artificial_tracks.py  cli.py  config.py  conversion.py  process_workflows.py  scenario_generator.py  scenario_report.py  tracks_from_map.py  utils.py  visualization.py
tutorials/fmu/: first_steps_fmu.py
