[project]
name = "aerosim"
version = "0.0.1"
description = "Main python package for AeroSim"
authors = [
    { name = "Praveen Palanisamy", email = "4770482+praveen-palanisamy@users.noreply.github.com" },
]
dependencies = [
    "pandas>=2.2.3",
    "geopy>=2.4.1",
    "folium>=0.19.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "click>=8.1.0",
    "simplekml>=1.3.1",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "geopandas>=0.14.1",
    "contextily>=1.4.0",
    "shapely>=2.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
aerosim = "aerosim.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aerosim"]

[tool.hatch.build.targets.wheel.force-include]
"../examples" = "aerosim/examples"
