[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "aerosim_utils"
version = "0.1.0"
description = "A suite of tools for aircraft trajectory and scenario generation, supporting both real ADS-B data processing and artificial track generation."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "pandas>=2.2.3",
    "geopy>=2.4.1",
    "folium>=0.19.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "click>=8.1.0",
    "simplekml>=1.3.1",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "geopandas>=0.14.1",
    "contextily>=1.4.0",
    "shapely>=2.0.2",
]

[project.scripts]
aerosim = "aerosim_utils.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["aerosim_utils"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "aerosim_utils/**/*.py",
    "README.md",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3 